# src/routes/notification.route.js
@@ -19,7 +19,7 @@ router.get("/", authMiddleware, getMyNotifications);
 router.get("/:notificationId", authMiddleware, getNotificationById);
 router.patch("/read/:notificationId", authMiddleware, markNotificationAsRead);
 router.patch("/read-all", authMiddleware, markAllNotificationsAsRead);
-router.delete("/:notificationId", authMiddleware, deleteNotification);
-router.delete("/", authMiddleware, deleteAllNotifications);
+router.delete("/delete/:notificationId", authMiddleware, deleteNotification);
+router.delete("/delete-all", authMiddleware, deleteAllNotifications);
 
 export default router;
